--- a/assets/auto-deploy-app/templates/deployment.yaml
+++ b/assets/auto-deploy-app/templates/deployment.yaml
@@ -47,8 +47,10 @@ spec:
 {{- if or (.Values.serviceAccount.name) (.Values.serviceAccountName) }}
       serviceAccountName: {{ .Values.serviceAccount.name | default .Values.serviceAccountName | quote }}
 {{- end }}
+      {{- with $.Values.image.secrets }}
       imagePullSecrets:
-{{- toYaml .Values.image.secrets | nindent 8 }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
 {{- if .Values.nodeSelector }}
       nodeSelector:
 {{- toYaml .Values.nodeSelector | nindent 8 }}
@@ -69,7 +71,7 @@ spec:
 {{- end }}
 {{- if .Values.tolerations }}
       tolerations:
-{{- toYaml .Values.tolerations | nindent 8 }}
+{{- toYaml .Values.tolerations | nindent 6 }}
 {{- end }}
 {{- if .Values.affinity }}
       affinity:
@@ -77,31 +79,31 @@ spec:
 {{- end }}
 {{- if .Values.initContainers }}
       initContainers:
-{{- toYaml .Values.initContainers | nindent 8 }}
+{{- toYaml .Values.initContainers | nindent 6 }}
 {{- end }}
 {{- if .Values.topologySpreadConstraints }}
       topologySpreadConstraints:
-{{- toYaml .Values.topologySpreadConstraints | nindent 8 }}
+{{- toYaml .Values.topologySpreadConstraints | nindent 6 }}
 {{- end }}
 {{- if or (.Values.persistence.enabled) (.Values.extraVolumes) }}
       volumes:
 {{- if .Values.persistence.enabled }}
 {{- $context := . }}
 {{- range $volume := .Values.persistence.volumes }}
-        - name: {{ $volume.name | quote }}
-          persistentVolumeClaim:
-            {{- $args := dict "context" $context "name" $volume.name }}
-            claimName: {{ template "pvcName" $args }}
+      - name: {{ $volume.name | quote }}
+        persistentVolumeClaim:
+          {{- $args := dict "context" $context "name" $volume.name }}
+          claimName: {{ template "pvcName" $args }}
 {{- end }}
 {{- end }}
 {{- if .Values.extraVolumes }}
-{{- toYaml .Values.extraVolumes | nindent 8 }}
+{{- toYaml .Values.extraVolumes | nindent 6 }}
 {{- end }}
 {{- end }}
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
 {{- if .Values.hostAliases }}
       hostAliases:
-{{- toYaml .Values.hostAliases | nindent 8 }}
+{{- toYaml .Values.hostAliases | nindent 6 }}
 {{- end }}
 {{- if .Values.priorityClassName }}
       priorityClassName: {{ .Values.priorityClassName }}
@@ -196,7 +198,7 @@ spec:
 {{- else if eq .Values.livenessProbe.probeType "exec" }}
           exec:
             command:
-{{- toYaml .Values.livenessProbe.command | nindent 14 }}
+{{- toYaml .Values.livenessProbe.command | nindent 12 }}
 {{- end }}
           initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
           timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
@@ -221,7 +223,7 @@ spec:
 {{- else if eq .Values.readinessProbe.probeType "exec" }}
           exec:
             command:
-{{- toYaml .Values.readinessProbe.command | nindent 14 }}
+{{- toYaml .Values.readinessProbe.command | nindent 12 }}
 {{- end }}
           initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
           timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
@@ -246,7 +248,7 @@ spec:
 {{- else if eq .Values.startupProbe.probeType "exec" }}
           exec:
             command:
-{{- toYaml .Values.startupProbe.command | nindent 14 }}
+{{- toYaml .Values.startupProbe.command | nindent 12 }}
 {{- end }}
           initialDelaySeconds: {{ .Values.startupProbe.initialDelaySeconds }}
           timeoutSeconds: {{ .Values.startupProbe.timeoutSeconds }}
@@ -263,15 +265,15 @@ spec:
         volumeMounts:
 {{- if .Values.persistence.enabled }}
 {{- range $volume := .Values.persistence.volumes }}
-          - name: {{ $volume.name | quote }}
-            mountPath: {{ $volume.mount.path | quote }}
-            {{- if $volume.mount.subPath }}
-            subPath: {{ $volume.mount.subPath | quote }}
-            {{- end }}
+        - name: {{ $volume.name | quote }}
+          mountPath: {{ $volume.mount.path | quote }}
+          {{- if $volume.mount.subPath }}
+          subPath: {{ $volume.mount.subPath | quote }}
+          {{- end }}
 {{- end }}
 {{- end }}
 {{- if .Values.extraVolumeMounts }}
-{{- toYaml .Values.extraVolumeMounts | nindent 10 }}
+{{- toYaml .Values.extraVolumeMounts | nindent 8 }}
 {{- end }}
 {{- end }}
 {{- end -}}
