--- a/assets/auto-deploy-app/templates/worker-deployment.yaml
+++ b/assets/auto-deploy-app/templates/worker-deployment.yaml
@@ -57,9 +57,9 @@ items:
 {{- end }}
         imagePullSecrets:
 {{- if and $workerConfig.image $workerConfig.image.secrets }}
-{{- toYaml $workerConfig.image.secrets | nindent 10 }}
-{{- else }}
-{{- toYaml $.Values.image.secrets | nindent 10 }}
+{{- toYaml $workerConfig.image.secrets | nindent 8 }}
+{{- else if $.Values.image.secrets }}
+{{- toYaml $.Values.image.secrets | nindent 8 }}
 {{- end }}
 {{- with $nodeSelectorConfig := default $.Values.nodeSelector $workerConfig.nodeSelector -}}
 {{- if $nodeSelectorConfig  }}
@@ -92,7 +92,7 @@ items:
 {{- with $tolerationsConfig := default $.Values.tolerations $workerConfig.tolerations -}}
 {{- if $tolerationsConfig  }}
         tolerations:
-{{- toYaml $tolerationsConfig | nindent 10 }}
+{{- toYaml $tolerationsConfig | nindent 8 }}
 {{- end }}
 {{- end }}
 {{- with $affinityConfig := default $.Values.affinity $workerConfig.affinity -}}
@@ -104,17 +104,17 @@ items:
 {{- with $initContainersConfig := default $.Values.initContainers $workerConfig.initContainers -}}
 {{- if $initContainersConfig  }}
         initContainers:
-{{- toYaml $initContainersConfig | nindent 10 }}
+{{- toYaml $initContainersConfig | nindent 8 }}
 {{- end }}
 {{- end }}
         terminationGracePeriodSeconds: {{ $workerConfig.terminationGracePeriodSeconds }}
 {{- if $workerConfig.hostAliases }}
         hostAliases:
-{{- toYaml $workerConfig.hostAliases | nindent 10 }}
+{{- toYaml $workerConfig.hostAliases | nindent 8 }}
 {{- end }}
 {{- if $workerConfig.extraVolumes }}
         volumes:
-{{- toYaml $workerConfig.extraVolumes | nindent 10 }}
+{{- toYaml $workerConfig.extraVolumes | nindent 8 }}
 {{- end }}
         containers:
         - name: {{ $.Chart.Name }}-{{ $workerName }}
@@ -167,7 +167,7 @@ items:
 {{- else if eq $livenessProbeConfig.probeType "exec" }}
             exec:
               command:
-{{- toYaml $livenessProbeConfig.command | nindent 16 }}
+{{- toYaml $livenessProbeConfig.command | nindent 14 }}
 {{- end }}
             initialDelaySeconds: {{ $livenessProbeConfig.initialDelaySeconds }}
             timeoutSeconds: {{ $livenessProbeConfig.timeoutSeconds }}
@@ -194,7 +194,7 @@ items:
 {{- else if eq $readinessProbeConfig.probeType "exec" }}
             exec:
               command:
-{{- toYaml $readinessProbeConfig.command | nindent 16 }}
+{{- toYaml $readinessProbeConfig.command | nindent 14 }}
 {{- end }}
             initialDelaySeconds: {{ $readinessProbeConfig.initialDelaySeconds }}
             timeoutSeconds: {{ $readinessProbeConfig.timeoutSeconds }}
@@ -222,7 +222,7 @@ items:
 {{ $workerConfig.resources | default $.Values.resources | toYaml | indent 12 }}
 {{- if $workerConfig.extraVolumeMounts }}
           volumeMounts:
-{{- toYaml $workerConfig.extraVolumeMounts | nindent 12 }}
+{{- toYaml $workerConfig.extraVolumeMounts | nindent 10 }}
 {{- end }}
 {{- end -}}
 {{- end -}}
