--- a/assets/auto-deploy-app/templates/db-migrate-hook.yaml
+++ b/assets/auto-deploy-app/templates/db-migrate-hook.yaml
@@ -30,6 +30,9 @@ spec:
         envFrom:
         - secretRef:
             name: {{ .Values.application.secretName }}
+{{- if .Values.extraEnvFrom }}
+{{- toYaml .Values.extraEnvFrom | nindent 8 }}
+{{- end }}
         {{- end }}
         env:
 {{- if .Values.application.database_url }}
