--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -197,6 +197,9 @@ persistence:
         # For example, GKE automatically chooses a default storage class and allocate a physical storage.
         # See https://cloud.google.com/kubernetes-engine/docs/concepts/persistent-volumes for more information.
         # storageClass: "myStorage"
+        # You can also reserve a persistent volume using `volumeName`
+        # See https://kubernetes.io/docs/concepts/storage/persistent-volumes/#reserving-a-persistentvolume
+        # volumeName: "my-vol"
 
 ## Configure extra Volumes
 ## ref: https://kubernetes.io/docs/concepts/storage/volumes/
