--- a/assets/auto-deploy-app/templates/db-migrate-hook.yaml
+++ b/assets/auto-deploy-app/templates/db-migrate-hook.yaml
@@ -39,6 +39,9 @@ spec:
         - name: DATABASE_URL
           value: {{ .Values.application.database_url | quote }}
 {{- end }}
+{{- if .Values.extraEnv }}
+{{- toYaml .Values.extraEnv | nindent 8 }}
+{{- end }}
         - name: GITLAB_ENVIRONMENT_NAME
           value: {{ .Values.gitlab.envName | quote }}
         - name: GITLAB_ENVIRONMENT_URL
