--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -276,6 +276,7 @@ workers: {}
   #   - stop_worker
   #   extraVolumes: []
   #   extraVolumeMounts: []
+  #   extraEnv: []
   #   extraEnvFrom: []
 
 cronjobs: {}
