--- a/assets/auto-deploy-app/templates/custom-resources.yaml
+++ b/assets/auto-deploy-app/templates/custom-resources.yaml
@@ -1,4 +1,4 @@
 {{- range .Values.customResources }}
-{{- toYaml . | nindent 0 }}
+{{ tpl (. | toYaml) $ | nindent 0 }}
 ---
-{{- end }}
+{{- end -}}
