feat: templating extra env from

--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -219,7 +219,7 @@ extraVolumeMounts: [ ]
 
 extraEnvFrom: [ ]
 # - secretRef:
-#     name: {{ .Values.application.secretName }}
+#     name: "{{ .Values.application.secretName }}"
 
 extraEnv: [ ]
 # - name:  ENV_VAR
