--- a/assets/auto-deploy-app/templates/deployment.yaml
+++ b/assets/auto-deploy-app/templates/deployment.yaml
@@ -125,12 +125,12 @@ spec:
         - secretRef:
             name: {{ .Values.application.secretName }}
 {{- if .Values.extraEnvFrom }}
-{{- toYaml .Values.extraEnvFrom | nindent 8 }}
+{{- tpl (.Values.extraEnvFrom | toYaml) . | nindent 8 }}
 {{- end }}
         {{- else}}
         envFrom:
 {{- if .Values.extraEnvFrom }}
-{{- toYaml .Values.extraEnvFrom | nindent 8 }}
+{{- tpl (.Values.extraEnvFrom | toYaml) . | nindent 8 }}
 {{- end }}
         {{- end }}
         env:
