--- a/assets/auto-deploy-app/templates/db-initialize-job.yaml
+++ b/assets/auto-deploy-app/templates/db-initialize-job.yaml
@@ -31,7 +31,7 @@ spec:
         - secretRef:
             name: {{ .Values.application.secretName }}
 {{- if .Values.extraEnvFrom }}
-{{- toYaml .Values.extraEnvFrom | nindent 8 }}
+{{- tpl (.Values.extraEnvFrom | toYaml) . | nindent 8 }}
 {{- end }}
         {{- end }}
         env:
